--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 title: "Thranholm.github.io"
 ---
 
-This is a Quarto website.
+This is a Quarto website. Hej
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
