--- a/ftvalg/Rapport.qmd
+++ b/ftvalg/Rapport.qmd
@@ -289,6 +289,7 @@ p_load(DT, reactable, shiny, shinyWidgets, formattable)
 
 ```{r}
 #| label: kredsmandater_kvotienttabeller
+#| eval: false
 
 kvotienttabeller_kredsmandater <- kredsmandater %>% 
   select(storkreds, navn, dhont, kvotient, rank, mandat) %>% 
