--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -312,7 +312,7 @@ Forsøg på at lave et kort med valgdata
 
 ```{r}
 #| label: Henter adresser fra DAWA
-#| eval: false
+#| eval: true
 
 library(httr)
 library(jsonlite)
@@ -347,7 +347,7 @@ storkreds_geo_data1 <- storkreds_geo_data %>%
 
 ```{r}
 #| label: kort
-#| eval: false
+#| eval: true
 
 
 ggplot(data = storkreds_geo_data1) +
