--- a/EP_rapport.qmd
+++ b/EP_rapport.qmd
@@ -11,9 +11,9 @@ rm(list = ls())
 library(pacman)
 p_load(tidyverse, xml2, readr, janitor, kableExtra)
 
-source("00_funktioner.R")
-source("valgforbund.R")
-source("epvalg.R")
+source("epvalg/00_funktioner.R")
+source("epvalg/valgforbund.R")
+source("epvalg/epvalg.R")
 
 ```
 
