--- a/EP_rapport.qmd
+++ b/EP_rapport.qmd
@@ -7,29 +7,41 @@ editor_options:
 ---
 
 ```{r}
+#| echo: false
+options(knitr.kable.NA = '')
+```
+
+
+```{r}
 rm(list = ls())
 
 library(pacman)
-p_load(tidyverse, xml2, readr, janitor, kableExtra)
+p_load(tidyverse, xml2, readr, janitor, kableExtra, jsonlite)
 
 source("epvalg/00_funktioner.R")
 source("epvalg/valgforbund.R")
 source("epvalg/epvalg.R")
+source("epvalg/Personlige stemmer.R")
 
 ```
 
+# Resultater
 
+## Samlet mandater
 
 ```{r}
 kable(ant_mandater_partier %>% select(-c(bogstav, forbund_bogstav, stemmer, pct_stemmer)) %>% filter(mandater > 0), format = "simple")
 ```
 
+## Procentfordeling og mandater
 
 ```{r}
 
 kable(ant_mandater_partier %>% select(-forbund_bogstav), format = "simple")
 
 ```
+
+## Rangering af mandater
 
 ```{r}
 
@@ -38,10 +50,71 @@ kable(rankings %>% filter(mandat_parti) %>% select(-mandat_parti) %>% arrange(ov
 
 ```
 
+## Rangering kvotienter
 
 ```{r}
 kable(rankings %>% select(-mandat_parti) %>% arrange(overall_rank), format = "html",
       caption = "Fuld ranking")
 
 ```
+
+## Rangering valgte personer
+
+```{r}
+## Kobler med parti kvotienter for at kunne rangere valgorden overall for personer
+
+# TODO: OBS, er afhængig af bestemt sortering. Antager overall rank er stigende, grupperet på partier.
+kvotienter_partier_til_pers <- kvotienter_partier %>% 
+  filter(mandat_parti) %>% 
+  select(bogstav, overall_rank) %>% 
+  nest_by(bogstav)
+
+pers_ranking2 <- pers_ranking %>% 
+  left_join(kvotienter_partier_til_pers, by = "bogstav") %>% 
+  rowwise() %>%
+  mutate(overall_rank = list(data[valgt_rang, "overall_rank"])) %>% 
+  select(-data) %>% 
+  unnest(cols = overall_rank)
+
+
+```
+
+
+Antagelse at alle er opstillet sideordnet (/kan *ikke* tage højde for partilister)
+
+```{r}
+
+kable(pers_ranking2 %>% 
+        filter(mandat) %>% 
+        select(bogstav, parti, navn, personligestemmer, valgt_rang, overall_rank) %>% 
+        arrange(bogstav, valgt_rang, overall_rank),
+      format = "html",
+      caption = "Valgte personer (Inkl. rang)")
+
+```
+
+```{r}
+
+kable(pers_ranking2 %>% 
+        filter(mandat) %>% 
+        select(bogstav, parti, navn, personligestemmer, valgt_rang, overall_rank) %>% 
+        arrange(overall_rank),
+      format = "html",
+      caption = "Total rang for valgte personer")
+
+```
+
+## Rangering alle opstillede personer
+
+```{r}
+
+kable(pers_ranking2 %>% 
+        select(bogstav, parti, navn, personligestemmer, valgt_rang, stedfortæder_rang) %>% 
+        arrange(bogstav, valgt_rang, stedfortæder_rang), 
+      format = "html",
+      caption = "Rangorden alle personer")
+
+```
+
+
 
