--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,10 @@
 ---
 title: "Emil Thranholm"
+toc: false
 ---
 
-# Welcome to my personal website
+## Welcome!
 
-This website contain different hobby project regarding data. I have a background in political science and love sports. So all topics on this page will revolve around data in combination with either politics or sports (and if really crazy, both).
+This website containing different hobby project regarding data. I have a background in political science and love sports. So all topics on this page will revolve around data in combination with either politics or sports (and if really crazy, both).
 
 
