--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -19,7 +19,7 @@ Dette dokument giver overblik over resultatet for Folketingsvalget, og kan opdat
 #| echo: false
 
 library(pacman)
-p_load(tidyverse, rmarkdown, readr, xml2, XML, janitor, flatxml, reshape2, maps, sf)
+p_load(tidyverse, readr, xml2, XML, janitor, flatxml, reshape2, maps, sf)
 
 ```
 
