--- a/EP_rapport.qmd
+++ b/EP_rapport.qmd
@@ -19,6 +19,7 @@ library(pacman)
 p_load(tidyverse, xml2, readr, janitor, kableExtra, jsonlite)
 
 source("epvalg/00_funktioner.R")
+source("epvalg/Oversigt over xml links.R")
 source("epvalg/valgforbund.R")
 source("epvalg/epvalg.R")
 source("epvalg/Personlige stemmer.R")
