--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -337,7 +337,7 @@ Forsøg på at lave et kort med valgdata
 
 ```{r}
 #| label: Henter adresser fra DAWA
-#| eval: true
+#| eval: false
 
 library(httr)
 library(jsonlite)
@@ -372,7 +372,7 @@ storkreds_geo_data1 <- storkreds_geo_data %>%
 
 ```{r}
 #| label: kort
-#| eval: true
+#| eval: false
 
 
 ggplot(data = storkreds_geo_data1) +
