--- a/mio6DK.qmd
+++ b/mio6DK.qmd
@@ -70,8 +70,9 @@ mangler <- FOLK1AM %>%
 value_box(
   title = "Nedtælling til 6 mio. danskere",
   value = format(mangler, big.mark = ".", decimal.mark = ","),
-  showcase = bs_icon("graph-up-arrow"),
-  theme = "primary"
+  showcase = bs_icon("graph-up-arrow")
+  #,
+  #theme = "primary"
 )
 
 ```
