--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -337,7 +337,7 @@ Forsøg på at lave et kort med valgdata
 
 ```{r}
 #| label: Henter adresser fra DAWA
-#| eval: false
+#| eval: true
 
 library(httr)
 library(jsonlite)
@@ -372,10 +372,10 @@ storkreds_geo_data1 <- storkreds_geo_data %>%
 
 ```{r}
 #| label: kort
-#| eval: false
+#| eval: true
 
 
-ggplot(data = storkreds_geo_data1) +
+ggplot(data = storkreds_geo_data1 %>% st_make_valid()) +
   geom_sf(aes(fill = pct_mandat), show.legend = FALSE) +
   #geom_sf_label(aes(label = paste0(round(pct_mandat, 2)*100, "%")), label.size = 0) +
   #coord_sf(datum = NA) +
